--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,12 @@
-body {
-    
+.saved {
+    width: 100px;
+}
+
+.savedName {
+    width: 200px;
+    text-align: left;
+}
+
+#theCharList {
+    margin-bottom: 4px;
 }
