--- a/views/index.hbs
+++ b/views/index.hbs
@@ -46,62 +46,62 @@
             <div class="columns">
                 <div class="box column is-1 has-text-centered" style="margin-bottom: 5px;">
                     <div class="control" style="margin-left: 20px;">
-                        <label class="radio"><input type="radio" name="stat1">STR</label><br>
-                        <label class="radio"><input type="radio" name="stat1">DEX</label><br>
-                        <label class="radio"><input type="radio" name="stat1">CON</label><br>
-                        <label class="radio"><input type="radio" name="stat1">INT</label><br>
-                        <label class="radio"><input type="radio" name="stat1">WIS</label><br>
-                        <label class="radio"><input type="radio" name="stat1">CHA</label>
+                        <label class="radio"><input type="radio" name="stat1" form='myForm' value='strength'>STR</label><br>
+                        <label class="radio"><input type="radio" name="stat1" form='myForm' value='dexterity'>DEX</label><br>
+                        <label class="radio"><input type="radio" name="stat1" form='myForm' value='constitution'>CON</label><br>
+                        <label class="radio"><input type="radio" name="stat1" form='myForm' value='intelligence'>INT</label><br>
+                        <label class="radio"><input type="radio" name="stat1" form='myForm' value='wisdom'>WIS</label><br>
+                        <label class="radio"><input type="radio" name="stat1" form='myForm' value='charisma'>CHA</label>
                     </div>
                 </div>
                 <div class="box column is-1 has-text-centered strength stats" style="margin-bottom: 5px;" id="str2">
                     <div class="control" style="margin-left: 20px;">
-                        <label class="radio"><input type="radio" name="stat2">STR</label><br>
-                        <label class="radio"><input type="radio" name="stat2">DEX</label><br>
-                        <label class="radio"><input type="radio" name="stat2">CON</label><br>
-                        <label class="radio"><input type="radio" name="stat2">INT</label><br>
-                        <label class="radio"><input type="radio" name="stat2">WIS</label><br>
-                        <label class="radio"><input type="radio" name="stat2">CHA</label>
+                        <label class="radio"><input type="radio" name="stat2" form='myForm' value='strength'>STR</label><br>
+                        <label class="radio"><input type="radio" name="stat2" form='myForm' value='dexterity'>DEX</label><br>
+                        <label class="radio"><input type="radio" name="stat2" form='myForm' value='constitution'>CON</label><br>
+                        <label class="radio"><input type="radio" name="stat2" form='myForm' value='intelligence'>INT</label><br>
+                        <label class="radio"><input type="radio" name="stat2" form='myForm' value='wisdom'>WIS</label><br>
+                        <label class="radio"><input type="radio" name="stat2" form='myForm' value='charisma'>CHA</label>
                     </div>
                 </div>
                 <div class="box column is-1 has-text-centered strength stats" style="margin-bottom: 5px;" id="str3">
                     <div class="control" style="margin-left: 20px;">
-                        <label class="radio"><input type="radio" name="stat3">STR</label><br>
-                        <label class="radio"><input type="radio" name="stat3">DEX</label><br>
-                        <label class="radio"><input type="radio" name="stat3">CON</label><br>
-                        <label class="radio"><input type="radio" name="stat3">INT</label><br>
-                        <label class="radio"><input type="radio" name="stat3">WIS</label><br>
-                        <label class="radio"><input type="radio" name="stat3">CHA</label>
+                        <label class="radio"><input type="radio" name="stat3" form='myForm' value='strength'>STR</label><br>
+                        <label class="radio"><input type="radio" name="stat3" form='myForm' value='dexterity'>DEX</label><br>
+                        <label class="radio"><input type="radio" name="stat3" form='myForm' value='constitution'>CON</label><br>
+                        <label class="radio"><input type="radio" name="stat3" form='myForm' value='intelligence'>INT</label><br>
+                        <label class="radio"><input type="radio" name="stat3" form='myForm' value='wisdom'>WIS</label><br>
+                        <label class="radio"><input type="radio" name="stat3" form='myForm' value='charisma'>CHA</label>
                     </div>
                 </div>
                 <div class="box column is-1 has-text-centered strength stats" style="margin-bottom: 5px;" id="str4">
                     <div class="control" style="margin-left: 20px;">
-                        <label class="radio"><input type="radio" name="stat4">STR</label><br>
-                        <label class="radio"><input type="radio" name="stat4">DEX</label><br>
-                        <label class="radio"><input type="radio" name="stat4">CON</label><br>
-                        <label class="radio"><input type="radio" name="stat4">INT</label><br>
-                        <label class="radio"><input type="radio" name="stat4">WIS</label><br>
-                        <label class="radio"><input type="radio" name="stat4">CHA</label>
+                        <label class="radio"><input type="radio" name="stat4" form='myForm' value='strength'>STR</label><br>
+                        <label class="radio"><input type="radio" name="stat4" form='myForm' value='dexterity'>DEX</label><br>
+                        <label class="radio"><input type="radio" name="stat4" form='myForm' value='constitution'>CON</label><br>
+                        <label class="radio"><input type="radio" name="stat4" form='myForm' value='intelligence'>INT</label><br>
+                        <label class="radio"><input type="radio" name="stat4" form='myForm' value='wisdom'>WIS</label><br>
+                        <label class="radio"><input type="radio" name="stat4" form='myForm' value='charisma'>CHA</label>
                     </div>
                 </div>
                 <div class="box column is-1 has-text-centered strength stats" style="margin-bottom: 5px;" id="str5">
                     <div class="control" style="margin-left: 20px;">
-                        <label class="radio"><input type="radio" name="stat5">STR</label><br>
-                        <label class="radio"><input type="radio" name="stat5">DEX</label><br>
-                        <label class="radio"><input type="radio" name="stat5">CON</label><br>
-                        <label class="radio"><input type="radio" name="stat5">INT</label><br>
-                        <label class="radio"><input type="radio" name="stat5">WIS</label><br>
-                        <label class="radio"><input type="radio" name="stat5">CHA</label>
+                        <label class="radio"><input type="radio" name="stat5" form='myForm' value='strength'>STR</label><br>
+                        <label class="radio"><input type="radio" name="stat5" form='myForm' value='dexterity'>DEX</label><br>
+                        <label class="radio"><input type="radio" name="stat5" form='myForm' value='constitution'>CON</label><br>
+                        <label class="radio"><input type="radio" name="stat5" form='myForm' value='intelligence'>INT</label><br>
+                        <label class="radio"><input type="radio" name="stat5" form='myForm' value='wisdom'>WIS</label><br>
+                        <label class="radio"><input type="radio" name="stat5" form='myForm' value='charisma'>CHA</label>
                     </div>
                 </div>
                 <div class="box column is-1 has-text-centered strength stats" style="margin-bottom: 5px;" id="str6">
                     <div class="control" style="margin-left: 20px;">
-                        <label class="radio"><input type="radio" name="stat6">STR</label><br>
-                        <label class="radio"><input type="radio" name="stat6">DEX</label><br>
-                        <label class="radio"><input type="radio" name="stat6">CON</label><br>
-                        <label class="radio"><input type="radio" name="stat6">INT</label><br>
-                        <label class="radio"><input type="radio" name="stat6">WIS</label><br>
-                        <label class="radio"><input type="radio" name="stat6">CHA</label>
+                        <label class="radio"><input type="radio" name="stat6" form='myForm' value='strength'>STR</label><br>
+                        <label class="radio"><input type="radio" name="stat6" form='myForm' value='dexterity'>DEX</label><br>
+                        <label class="radio"><input type="radio" name="stat6" form='myForm' value='constitution'>CON</label><br>
+                        <label class="radio"><input type="radio" name="stat6" form='myForm' value='intelligence'>INT</label><br>
+                        <label class="radio"><input type="radio" name="stat6" form='myForm' value='wisdom'>WIS</label><br>
+                        <label class="radio"><input type="radio" name="stat6" form='myForm' value='charisma'>CHA</label>
                     </div>
                 </div>
             </div>
@@ -111,15 +111,22 @@
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-primary" type="text" placeholder="Primary input">
+                    <form action='/add-character' method="POST" id='myForm'>
+                        <fieldset>
+                            <input class="input is-primary" type="text" name="character">
+                            <input type="submit" value="Save Character">
+                            <input type="hidden" name="statNum1" value="" id="statNum1">
+                            <input type="hidden" name="statNum2" value="" id="statNum2">
+                            <input type="hidden" name="statNum3" value="" id="statNum3">
+                            <input type="hidden" name="statNum4" value="" id="statNum4">
+                            <input type="hidden" name="statNum5" value="" id="statNum5">
+                            <input type="hidden" name="statNum6" value="" id="statNum6">
+                        </fieldset>
+                    </form>
                 </div>
             </div>
 
-            <div style='margin-top: 10px;'>
-                <button class="button" id="saveButton">Save these Abilities!</button>
-            </div>
-
-            <br><br>
+            <br>
             <p>Saved Characters:</p>
             <ul class="characters">
                 {{#each characters}}
@@ -140,7 +147,6 @@
         </div>
     </main>
  
-
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="random.js"></script>
     {{!-- <script src="statcontrol.js"></script> statcontrol is a work in progress--}}
